--- a/hello-world/src/main/resources/application.properties
+++ b/hello-world/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.org.springframework.cloud.gateway=trace
-logging.level.org.springframework.http.server.reactive=debug
-logging.level.org.springframework.web.reactive=debug
-logging.level.reactor.netty=debug
+#logging.level.org.springframework.cloud.gateway=trace
+#logging.level.org.springframework.http.server.reactive=debug
+#logging.level.org.springframework.web.reactive=debug
+#logging.level.reactor.netty=debug
